# Dollar-Web-Scraping

./: .gitignore  Dockerfile  README.md  application.py  docker-compose.yml  pyproject.toml
app/: adapter.py  constants.py  service.py  settings.py  view.py
