[tool.poetry]
name = "dollar-scraping"
version = "0.1.0"
description = ""
authors = ["RRodriQZ <rrquispezabala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "4.10.0"
requests = "2.26.0"
urllib3 = "1.26.7"
Flask = "1.1.2"
pytz = "2021.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
